<resources>
    <string name="app_name">Outfit Recommend</string>
    <string name="input_account">手机号/账号</string>
    <string name="input_password">密码</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="get">获取</string>
    <string name="captcha">验证码</string>
    <string name="password_limit">8–20个数字或字母</string>
    <string name="create_an_account">Create an account&#032;</string>
    <string name="phone_number">手机号</string>
    <string name="login_phone">手机号登录</string>
    <string name="login_others">手机验证码登录 &#124; 注册</string>
    <string name="login_other_way">其他登录方式</string>
    <string name="read_agreement">阅读并同意《用户协议与隐私协议》</string>
    <string name="click_to_input">点击输入</string>
    <string name="fill_profile_to_recommend">完善个人信息，获取智能推荐</string>
    <string name="must_fill">必填*</string>
    <string name="optional_fill">选填</string>
    <string name="boy">男生</string>
    <string name="girl">女生</string>
    <string name="privacy_security_active">已为您开启隐私保护</string>
    <string name="height">身高/cm</string>
    <string name="weight">体重/kg</string>
    <string name="waist">腰围/cm</string>
    <string name="hip">臀围/cm</string>
    <string name="bust">胸围/cm</string>
    <string name="shoulder_width">肩宽/cm</string>
    <string name="goods_title_placeholder">春夏季格子衬衫极简风</string>
    <string name="goods_title_placeholder_long">春夏季格子衬衫极简风复古百搭春夏季格子衬衫极简风</string>
    <string name="price_placeholder">￥198</string>
    <string name="profile_incomplete">您的身材信息尚未完善！</string>
    <string name="to_complete_profile">去完善>></string>
    <string name="starred">已收藏</string>
    <string name="replied">已回复</string>
    <string name="loading">加载中…</string>
    <string name="refreshed">已刷新</string>
    <string name="connect_error">网络错误</string>
    <string name="comment_success">评论成功!</string>
    <string name="save_success">保存成功!</string>
    <string name="copied_success">复制成功!</string>
    <string name="logout_confirm">确定要退出登录吗?</string>
    <string name="delete_confirm">确定要删除吗?</string>
    <string name="clear_confirm">是否清空?</string>
    <string name="notice">温馨提示</string>
    <string name="agree_and_continue">同意并继续</string>
    <string name="disagree">不同意</string>
    <string name="all">全部</string>
    <string name="comment_numbers_placeholder">评论（19）</string>
    <string name="username_placeholder">用户234</string>
    <string name="publish_date_placeholder">11天前</string>
    <string name="copy_path">复制链接</string>
    <string name="save">保存</string>
    <string name="star">收藏</string>
    <string name="try_on">试穿</string>
    <string name="skip">跳转</string>
    <string name="all_comment_placeholder">全部评论（19）</string>
    <string name="no_more">-没有更多啦-</string>
    <string name="recommend">推荐</string>
    <string name="home">首页</string>
    <string name="wardrobe">试衣间</string>
    <string name="moments">搭圈</string>
    <string name="me">我的</string>
    <string name="settings">设置</string>
    <string name="refresh">刷新</string>
    <string name="clear">清空</string>
    <string name="delete">删除</string>
    <string name="next_step">下一步</string>
    <string name="previous_step">上一步</string>
    <string name="no_wardrobe_history_long">暂无试穿记录！快去逛逛吧！</string>
    <string name="no_wardrobe_history">暂无历史试穿记录</string>
    <string name="more">更多</string>
    <string name="wardrobe_history">试穿记录</string>
    <string name="brainstorming">待定</string>
    <string name="input_captcha">输入验证码</string>
    <string name="send_captcha_placeholder">验证码已发送至  13390892301</string>
    <string name="send_captcha_countdown_placeholder">60 秒后可重新获取</string>
    <string name="acquire_captcha_again">重新获取</string>
    <string name="number_placeholder_1">99</string>
    <string name="number_placeholder_2">10</string>
    <string name="number_zero">0</string>
    <string name="forum">广场</string>
    <string name="signature_placeholder">未设置签名</string>
    <string name="his_post">他的动态</string>
    <string name="activity">动态</string>
    <string name="followed">粉丝</string>
    <string name="follows">关注</string>
    <string name="share_now">快来分享穿搭吧～</string>
    <string name="post_history">发布历史</string>
    <string name="draft">草稿箱</string>
    <string name="post">发布</string>
    <string name="photo">图片</string>
    <string name="save_draft">存草稿</string>
    <string name="my_figure_detail">我的身材信息</string>
    <string name="go_setting">去设置</string>
    <string name="browse_history">浏览历史</string>
    <string name="browse_record">浏览记录</string>
    <string name="no_browse_history">暂无历史浏览记录</string>
    <string name="goods">商品</string>
    <string name="my_stars">我的收藏</string>
    <string name="no_stars">暂无收藏记录</string>
    <string name="no_likes">暂无喜欢</string>
    <string name="set_profile">修改个人资料</string>
    <string name="change_profile">更改头像</string>
    <string name="nickname">昵称</string>
    <string name="signature">签名</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="logout">退出登录</string>
    <string name="draft_notice">温馨提示：右滑可删除草稿</string>
    <string name="understood">我知道了</string>
    <string name="my_likes">我的喜欢</string>
    <string name="slogan">搭配每一次的可能</string>
    <string name="avatar">头像</string>
    <string name="logo">logo</string>
    <string name="back">返回</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomore">没有更多了</string>
    <string name="load_fail">加载失败，点击重试</string>
    <string name="error_network">网络错误</string>
    <string name="articlecover">文章封面</string>
</resources>