<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="0.8:1"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/item_goods_preview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/pink_100"
                    android:src="@drawable/idea"
                    android:contentDescription="@string/articlecover" />

                <com.lm.piccolo.view.PiccoloLayout
                    android:id="@+id/piccoloLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mask="com.lm.piccolo.drawable.TextShiningDrawable">

                    <TextView
                        android:id="@+id/item_goods_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:lineSpacingExtra="3.2sp"
                        android:singleLine="true"
                        android:text="@string/goods_title_placeholder"
                        android:textColor="@color/black" />
                </com.lm.piccolo.view.PiccoloLayout>

                <com.lm.piccolo.view.PiccoloLayout
                    android:id="@+id/piccoloLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mask="com.lm.piccolo.drawable.TextShiningDrawable">

                    <TextView
                        android:id="@+id/item_goods_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:textSize="14sp"
                        android:fontFamily="sans-serif-medium"
                        android:lineSpacingExtra="3.2sp"
                        android:singleLine="true"
                        android:text="@string/price_placeholder"
                        android:textColor="@color/red" />
                </com.lm.piccolo.view.PiccoloLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>